@@ -1,3 +1,6 @@
+2016-02-16 Peter Onyisi
+	* Add Sherpa ttV
+
 2016-02-14 Harish Potti <harish.potti@cern.ch>
 	* Add triboson samples to xsection file
 2016-01-27 Harish Potti <harish.potti@cern.ch>
